--- a/mednik/Views/Shared/_Layout.cshtml
+++ b/mednik/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿@using Microsoft.AspNetCore.Mvc.RazorPages
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -14,25 +15,36 @@
         <div class="container-fluid">
             <a class="navbar-brand logo text-white" asp-controller="Home" asp-action="Index">Math <i class="bi bi-mortarboard-fill"></i></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavig" aria-controls="navbarNavig" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon" style="padding: 5px"><i class="bi bi-bounding-box-circles text-white"></i></span>
+                <span class="navbar-toggler-icon" style="padding: 5px">
+                    <i class="bi bi-bounding-box-circles text-white"></i>
+                </span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNavig">
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" id="navbarDropdownHSE" role="button"
-                        data-bs-toggle="dropdown" aria-expanded="false" asp-controller="HSE" asp-action="Index">ВШЭ <i class="bi bi-book"></i></a>
+                           data-bs-toggle="dropdown" aria-expanded="false" asp-controller="HSE" asp-action="Index">
+                            ВШЭ <i class="bi bi-book"></i>
+                        </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownHSE">
-                            <li><a class="dropdown-item text-white" target="_blank" href="#">Алгебра</a></li>
-                            <li><a class="dropdown-item text-white" target="_blank" href="#">Дискретная математика</a></li>
+                            <li>
+                                <a class="dropdown-item text-white" target="_blank" href="#">Алгебра</a>
+                            </li>
+                            <li>
+                                <a class="dropdown-item text-white" target="_blank" href="#">Дискретная математика</a>
+                            </li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white"
                            id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                           href="#">Сервисы <i class="bi bi-calculator"></i>
+                           href="#">
+                            Сервисы <i class="bi bi-calculator"></i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item text-white" href="https://matrixcalc.org/" target="_blank">Матричный калькулятор</a></li>
+                            <li>
+                                <a class="dropdown-item text-white" href="https://matrixcalc.org/" target="_blank">Матричный калькулятор</a>
+                            </li>
                             <li>
                                 <a class="dropdown-item text-white" href="http://timbaumann.info/svd-image-compression-demo/" target="_blank">
                                     Сингулярное разложение(SVD)
@@ -47,7 +59,14 @@
                         <a class="nav-link text-white" asp-controller="Contacts" asp-action="Index">Контакты <i class="bi bi-info-circle-fill"></i></a>
                     </li>
                     <li class="nav-item justify-content-end">
-                        <a class="nav-link text-white" asp-controller="Login" asp-action="Index">Login <i class="bi bi-code-slash"></i></a>
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <a class="nav-link text-white" asp-controller="Login" asp-action="Logout">Logout <i class="bi bi-code-slash"></i></a>
+                        }
+                        else
+                        {
+                            <a class="nav-link text-white" asp-controller="Login" asp-action="Index">Login <i class="bi bi-code-slash"></i></a>
+                        }
                     </li>
                 </ul>
             </div>
@@ -57,7 +76,6 @@
 <div class="hor_line"></div>
 
 @RenderBody()
-
 
 @{ string pop = "@popperjs"; }
 <script src="/node_modules/@pop/core/dist/umd/popper.js"></script>
