--- a/mednik/Views/_ViewImports.cshtml
+++ b/mednik/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using mednik
 @using mednik.Models
+@using mednik.Models.DTO
+@using Microsoft.AspNetCore.Identity.EntityFrameworkCore
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
