uploading images to mongodb

--- a/mednik/Views/Home/Index.cshtml
+++ b/mednik/Views/Home/Index.cshtml
@@ -13,6 +13,16 @@
 <body>
 
 <div class="container">
+    @if (User?.Identity?.IsAuthenticated ?? false)
+    {
+        <div class="row" style="margin-bottom: 50px">
+            <div class="col"></div>
+            <div class="col-xs-2 col-sm-2">
+                <a class="btn btn-primary" asp-controller="Posts" asp-action="Index">Добавить +</a>
+            </div>
+        </div>
+    }
+
     <section class="posts row">
         <div class="col-xs-6 col-md-6 col-lg-4">
             <div class="card post" style="background-color: #253D66">
