--- a/mednik/Views/Home/Index.cshtml
+++ b/mednik/Views/Home/Index.cshtml
@@ -1,3 +1,4 @@
+@using mednik.Controllers
 @model IEnumerable<Post>
 
 @{
@@ -28,13 +29,16 @@
         {
             <div class="col-xs-6 col-md-6 col-lg-4">
                 <div class="card post" style="background-color: #253D66">
-                    <form asp-controller="Posts" asp-action="Delete" method="post">
-                        <input type="hidden" name="Id" value="@post.Id"/>
-                        <button type="submit" style="background: transparent; border: none">
-                            <i class="bi bi-trash text-white"></i>
-                        </button>
-                    </form>
-                    <img src="..." class="card-img-top" style="width: 100%; height: 200px">
+                    @if (User?.Identity?.IsAuthenticated ?? false)
+                    {
+                        <form asp-controller="Posts" asp-action="Delete" method="post">
+                            <input type="hidden" name="Id" value="@post.Id"/>
+                            <button type="submit" style="background: transparent; border: none">
+                                <i class="bi bi-trash text-white"></i>
+                            </button>
+                        </form>
+                    }
+                    <embed src="@Url.Action("Render", "Posts", new { imgUrl = post.ImageURL })" class="card-img-top" style="width: 100%; height: 200px">
                     <div class="card-body">
                         <h5 class="card-title text-white">@post.Name</h5>
                         <p class="card-text text-white">@post.Description</p>
