--- a/mednik/Views/Home/Index.cshtml
+++ b/mednik/Views/Home/Index.cshtml
@@ -39,13 +39,13 @@
                         </form>
                     }
                     @{
-
+                        var pdf = Url.Action("Render", "Posts", new {imgUrl = post.ImageURL});
                     }
-                    <embed src="@Url.Action("Render", "Posts", new {imgUrl = post.ImageURL})" class="card-img-top" style="width: 100%; height: 200px">
+                    <embed src="@pdf" class="card-img-top" style="width: 100%; height: 200px">
                     <div class="card-body">
                         <h5 class="card-title text-white">@post.Name</h5>
                         <p class="card-text text-white">@post.Description</p>
-                        <a class="btn btn-primary" href="@Url.Action("Render", "Posts", new {imgUrl = post.ImageURL})" target="_blank">Открыть</a>
+                        <a class="btn btn-primary" href="@pdf" target="_blank">Открыть</a>
                     </div>
                 </div>
             </div>
