--- a/mednik/Views/Shared/_Layout.cshtml
+++ b/mednik/Views/Shared/_Layout.cshtml
@@ -1,5 +1,7 @@
 ﻿@using mednik.Data.Repositories.Services
-@inject IServicesRepository Repository;
+@using mednik.Data.Repositories.Subjects
+@inject IServicesRepository ServicesRepository;
+@inject ISubjectsRepository SubjectsRepository;
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -7,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial_scale=1.0">
     <link rel="stylesheet" href="/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="~/main.css">
     <link rel="icon" type="image/png" sizes="180x180" href="Icon.png"/>
 </head>
 <body>
@@ -24,27 +26,53 @@
                 <ul class="navbar-nav">
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white" id="navbarDropdownHSE" role="button"
-                           data-bs-toggle="dropdown" aria-expanded="false" asp-controller="HSE" asp-action="Index">
+                           data-bs-toggle="dropdown" aria-expanded="false">
                             ВШЭ <i class="bi bi-book"></i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownHSE">
-                            <li>
-                                <a class="dropdown-item text-white" target="_blank" href="#">Алгебра</a>
-                            </li>
-                            <li>
-                                <a class="dropdown-item text-white" target="_blank" href="#">Дискретная математика</a>
-                            </li>
+                            @{
+                                var subjects = await SubjectsRepository.GetAllAsync();
+                            }
+                            @foreach (var subject in subjects)
+                            {
+                                <li>
+                                    <div class="dropdown-item btn-group">
+                                        <form asp-controller="Subjects" asp-action="Groups">
+                                            <input type="hidden" name="id" value="@subject.Id"/>
+                                            <button type="submit" class="dropdown-item text-white"
+                                                    style="background: transparent; border: none">
+                                                @subject.Name
+                                            </button>
+                                        </form>
+                                        @* <a class="dropdown-item text-white" target="_blank" href="#">@subject.Name</a> *@
+                                        @if (User?.Identity?.IsAuthenticated ?? false)
+                                        {
+                                            <form asp-controller="Subjects" asp-action="Delete">
+                                                <input type="hidden" name="id" value="@subject.Id"/>
+                                                <button type="submit" class="dropdown-item" style="background: transparent; border: none">
+                                                    <i class="bi bi-trash text-white"></i>
+                                                </button>
+                                            </form>
+                                        }
+                                    </div>
+                                </li>
+                            }
+                            @if (User?.Identity?.IsAuthenticated ?? false)
+                            {
+                                <li>
+                                    <a class="dropdown-item add-service" asp-controller="Subjects" asp-action="Add">Добавить +</a>
+                                </li>
+                            }
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle text-white"
-                           id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false"
-                           href="#">
+                           id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Сервисы <i class="bi bi-calculator"></i>
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                             @{
-                                var services = await Repository.GetAllAsync();
+                                var services = await ServicesRepository.GetAllAsync();
                             }
                             @foreach (var service in services)
                             {
@@ -77,14 +105,16 @@
                     <li class="nav-item">
                         <a class="nav-link text-white" asp-controller="Contacts" asp-action="Index">Контакты <i class="bi bi-info-circle-fill"></i></a>
                     </li>
-                    <li class="nav-item justify-content-end">
+                </ul>
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
                         @if (User?.Identity?.IsAuthenticated ?? false)
                         {
                             <a class="nav-link text-white" asp-controller="Login" asp-action="Logout">Logout <i class="bi bi-code-slash"></i></a>
                         }
                         else
                         {
-                            <a class="nav-link text-white" asp-controller="Login" asp-action="Index">Login <i class="bi bi-code-slash"></i></a>
+                            <a class="nav-link text-white " asp-controller="Login" asp-action="Index">Login <i class="bi bi-code-slash"></i></a>
                         }
                     </li>
                 </ul>
