changed entity framework to dapper

--- a/mednik/Views/Subjects/Add.cshtml
+++ b/mednik/Views/Subjects/Add.cshtml
@@ -16,7 +16,7 @@
         <div class="col login">
             <form class="box" asp-controller="Subjects" asp-action="AddSubjectToDB" method="post">
                 <h1></h1>
-                <input type="text" placeholder="Название" name="name">
+                <input type="text" placeholder="Название предмета" name="name">
                 <input type="submit" value="Добавить">
             </form>
         </div>
