validation summaries for addition operations

--- a/mednik/Views/Groups/AddPost.cshtml
+++ b/mednik/Views/Groups/AddPost.cshtml
@@ -1,4 +1,4 @@
-@model Guid
+@model GroupPostDTO
 
 @{
     Layout = "_Layout";
@@ -16,12 +16,12 @@
     <div class="row">
         <div class="col"></div>
         <div class="col login">
-            <form class="box" asp-controller="Posts" asp-action="SaveToGroup" method="post" enctype="multipart/form-data">
-                <h1></h1>
-                <input type="hidden" name="groupId" value="@Model"/>
-                <input type="text" placeholder="Название" name="name">
-                <input type="text" placeholder="Описание" name="description">
-                <input type="file" class="text-white" name="data" accept="application/pdf"/>
+            <form class="box" asp-controller="Groups" asp-action="SaveFileToGroup" method="post" enctype="multipart/form-data">
+                <div class="row text-white" asp-validation-summary="ModelOnly"></div>
+                <input type="hidden" name="GroupdId" value="@Model.GroupdId"/>
+                <input type="text" placeholder="Название" name="Name">
+                <input type="text" placeholder="Описание" name="Description">
+                <input type="file" class="text-white" name="FileData" accept="application/pdf"/>
                 <input type="submit" value="Сохранить">
             </form>
         </div>
