--- a/mednik/Views/Groups/AddGroup.cshtml
+++ b/mednik/Views/Groups/AddGroup.cshtml
@@ -1,4 +1,4 @@
-@model Guid
+@model SubjectIdAndGroupName
 
 @{
     Layout = "_Layout";
@@ -16,9 +16,9 @@
         <div class="col"></div>
         <div class="col login">
             <form class="box" asp-controller="Groups" asp-action="AddGroupToSubject" method="post">
-                <h1></h1>
-                <input type="hidden" value="@Model" name="id"/>
-                <input type="text" placeholder="Название" name="name">
+                <div class="row text-white" asp-validation-summary="ModelOnly"></div>
+                <input type="hidden" value="@Model.SubjectId" name="SubjectId"/>
+                <input type="text" placeholder="Название" name="GroupName">
                 <input type="submit" value="Добавить">
             </form>
         </div>
