--- a/mednik/Views/Home/Index.cshtml
+++ b/mednik/Views/Home/Index.cshtml
@@ -17,7 +17,7 @@
         <div class="row" style="margin-bottom: 50px">
             <div class="col"></div>
             <div class="col-xs-2 col-sm-2">
-                <a class="btn btn-primary" asp-controller="Posts" asp-action="Index">Добавить +</a>
+                <a class="btn btn-primary" asp-controller="Posts" asp-action="Index">Добавить разбор</a>
             </div>
         </div>
     }
