--- a/mednik/Views/Shared/_Layout.cshtml
+++ b/mednik/Views/Shared/_Layout.cshtml
@@ -1,5 +1,6 @@
 ﻿@using mednik.Data.Repositories.Services
 @using mednik.Data.Repositories.Subjects
+@using Microsoft.AspNetCore.Http.Extensions
 @inject IServicesRepository ServicesRepository;
 @inject ISubjectsRepository SubjectsRepository;
 <!DOCTYPE html>
@@ -10,6 +11,7 @@
     <link rel="stylesheet" href="~/node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="~/main.css">
+    <meta name="theme-color" content="#253D66">
     <link rel="icon" type="image/png" sizes="180x180" href="~/Icon.png"/>
 </head>
 <body>
@@ -37,19 +39,17 @@
                             {
                                 <li>
                                     <div class="dropdown-item btn-group">
-                                        <form asp-controller="Subjects" asp-action="Groups">
+                                        <form asp-controller="Subjects" asp-action="Groups" method="get">
                                             <input type="hidden" name="id" value="@subject.Id"/>
-                                            <button type="submit" class="dropdown-item text-white"
-                                                    style="background: transparent; border: none">
+                                            <button type="submit" class="dropdown-item text-white pseudo-button">
                                                 @subject.Name
                                             </button>
                                         </form>
-                                        @* <a class="dropdown-item text-white" target="_blank" href="#">@subject.Name</a> *@
                                         @if (User?.Identity?.IsAuthenticated ?? false)
                                         {
                                             <form asp-controller="Subjects" asp-action="Delete">
                                                 <input type="hidden" name="id" value="@subject.Id"/>
-                                                <button type="submit" class="dropdown-item" style="background: transparent; border: none">
+                                                <button type="submit" class="dropdown-item pseudo-button">
                                                     <i class="bi bi-trash text-white"></i>
                                                 </button>
                                             </form>
@@ -83,7 +83,8 @@
                                         {
                                             <form asp-controller="Services" asp-action="Delete" method="post">
                                                 <input type="hidden" name="id" value="@service.Id"/>
-                                                <button class="dropdown-item" type="submit" style="background: transparent; border: none">
+                                                <input type="hidden" name="returnUrl" value="@Context.Request.GetDisplayUrl()"/>
+                                                <button class="dropdown-item pseudo-button" type="submit">
                                                     <i class="bi bi-trash text-white"></i>
                                                 </button>
                                             </form>
@@ -94,7 +95,10 @@
                             @if (User?.Identity?.IsAuthenticated ?? false)
                             {
                                 <li>
-                                    <a class="dropdown-item add-service" asp-controller="Services" asp-action="Index">Добавить +</a>
+                                    <form asp-controller="Services" asp-action="AddService" method="get">
+                                        <input type="hidden" value="@Context.Request.GetDisplayUrl()" name="returnUrl"/>
+                                        <button type="submit" class="pseudo-button dropdown-item add-service">Добавить +</button>
+                                    </form>
                                 </li>
                             }
                         </ul>
@@ -114,7 +118,10 @@
                         }
                         else
                         {
-                            <a class="nav-link text-white " asp-controller="Login" asp-action="Index">Login <i class="bi bi-code-slash"></i></a>
+                            <form asp-controller="Login" asp-action="Login" method="get">
+                                <input type="hidden" value="@Context.Request.GetDisplayUrl()" name="returnUrl"/>
+                                <button type="submit" class="nav-link text-white pseudo-button">Login <i class="bi bi-code-slash"></i></button>
+                            </form>
                         }
                     </li>
                 </ul>
