--- a/mednik/Views/Home/Index.cshtml
+++ b/mednik/Views/Home/Index.cshtml
@@ -25,7 +25,7 @@
     <section class="row">
         @foreach (Post post in Model)
         {
-            <div class="col-xs-6 col-md-6 col-lg-4">
+            <div class="col-xs-6 col-md-12 col-lg-6 col-xl-4">
                 <div class="card post" style="background-color: #253D66">
                     @if (User?.Identity?.IsAuthenticated ?? false)
                     {
